Raylib/raylib.jai

 //
// This file was auto-generated using the following command:
//
// jai generate.jai
//
// AND THEN IT IS MANUALLY EDITED, BE CAREFUL!

#import "Math";

#load "extra.jai";

RAYLIB_VERSION_MAJOR :: 4;
RAYLIB_VERSION_MINOR :: 5;
RAYLIB_VERSION_PATCH :: 0;
RAYLIB_VERSION :: "4.5";

DEG2RAD :: PI/180.0;

RAD2DEG :: 180.0/PI;

RLGL_VERSION :: "4.5";

RL_DEFAULT_BATCH_BUFFER_ELEMENTS :: 8192;

RL_DEFAULT_BATCH_BUFFERS :: 1;

RL_DEFAULT_BATCH_DRAWCALLS :: 256;

RL_DEFAULT_BATCH_MAX_TEXTURE_UNITS :: 4;

RL_MAX_MATRIX_STACK_SIZE :: 32;

RL_MAX_SHADER_LOCATIONS :: 32;

RL_CULL_DISTANCE_NEAR :: 0.01;

RL_CULL_DISTANCE_FAR :: 1000.0;

RL_TEXTURE_WRAP_S :: 0x2802;
RL_TEXTURE_WRAP_T :: 0x2803;
RL_TEXTURE_MAG_FILTER :: 0x2800;
RL_TEXTURE_MIN_FILTER :: 0x2801;

RL_TEXTURE_FILTER_NEAREST :: 0x2600;
RL_TEXTURE_FILTER_LINEAR :: 0x2601;
RL_TEXTURE_FILTER_MIP_NEAREST :: 0x2700;
RL_TEXTURE_FILTER_NEAREST_MIP_LINEAR :: 0x2702;
RL_TEXTURE_FILTER_LINEAR_MIP_NEAREST :: 0x2701;
RL_TEXTURE_FILTER_MIP_LINEAR :: 0x2703;
RL_TEXTURE_FILTER_ANISOTROPIC :: 0x3000;
RL_TEXTURE_MIPMAP_BIAS_RATIO :: 0x4000;

RL_TEXTURE_WRAP_REPEAT :: 0x2901;
RL_TEXTURE_WRAP_CLAMP :: 0x812F;
RL_TEXTURE_WRAP_MIRROR_REPEAT :: 0x8370;
RL_TEXTURE_WRAP_MIRROR_CLAMP :: 0x8742;

RL_MODELVIEW :: 0x1700;
RL_PROJECTION :: 0x1701;
RL_TEXTURE :: 0x1702;

RL_LINES :: 0x0001;
RL_TRIANGLES :: 0x0004;
RL_QUADS :: 0x0007;

RL_UNSIGNED_BYTE :: 0x1401;
RL_FLOAT :: 0x1406;

RL_STREAM_DRAW :: 0x88E0;
RL_STREAM_READ :: 0x88E1;
RL_STREAM_COPY :: 0x88E2;
RL_STATIC_DRAW :: 0x88E4;
RL_STATIC_READ :: 0x88E5;
RL_STATIC_COPY :: 0x88E6;
RL_DYNAMIC_DRAW :: 0x88E8;
RL_DYNAMIC_READ :: 0x88E9;
RL_DYNAMIC_COPY :: 0x88EA;

RL_FRAGMENT_SHADER :: 0x8B30;
RL_VERTEX_SHADER :: 0x8B31;
RL_COMPUTE_SHADER :: 0x91B9;

RL_ZERO :: 0;
RL_ONE :: 1;
RL_SRC_COLOR :: 0x0300;
RL_ONE_MINUS_SRC_COLOR :: 0x0301;
RL_SRC_ALPHA :: 0x0302;
RL_ONE_MINUS_SRC_ALPHA :: 0x0303;
RL_DST_ALPHA :: 0x0304;
RL_ONE_MINUS_DST_ALPHA :: 0x0305;
RL_DST_COLOR :: 0x0306;
RL_ONE_MINUS_DST_COLOR :: 0x0307;
RL_SRC_ALPHA_SATURATE :: 0x0308;
RL_CONSTANT_COLOR :: 0x8001;
RL_ONE_MINUS_CONSTANT_COLOR :: 0x8002;
RL_CONSTANT_ALPHA :: 0x8003;
RL_ONE_MINUS_CONSTANT_ALPHA :: 0x8004;

RL_FUNC_ADD :: 0x8006;
RL_MIN :: 0x8007;
RL_MAX :: 0x8008;
RL_FUNC_SUBTRACT :: 0x800A;
RL_FUNC_REVERSE_SUBTRACT :: 0x800B;
RL_BLEND_EQUATION :: 0x8009;
RL_BLEND_EQUATION_RGB :: 0x8009;
RL_BLEND_EQUATION_ALPHA :: 0x883D;
RL_BLEND_DST_RGB :: 0x80C8;
RL_BLEND_SRC_RGB :: 0x80C9;
RL_BLEND_DST_ALPHA :: 0x80CA;
RL_BLEND_SRC_ALPHA :: 0x80CB;
RL_BLEND_COLOR :: 0x8005;

RLGL_Data :: struct {
    currentBatch : *RenderBatch;
    defaultBatch :  RenderBatch;

    State : struct {
        vertexCounter : s32;
        texcoordx, texcoordy : float;
        normalx, normaly, normalz : float;
        colorr, colorg, colorb, colora : u8;

        currentMatrixMode : s32;
        currentMatrix : *Matrix;
        modelview  : Matrix;
        projection : Matrix;
        transform  : Matrix;
        transformRequired : bool;
        stack : [RL_MAX_MATRIX_STACK_SIZE]Matrix;
        stackCounter : s32;

        defaultTextureId  :  u32;
        activeTextureId   : [RL_DEFAULT_BATCH_MAX_TEXTURE_UNITS]u32;
        defaultVShaderId  :  u32;
        defaultFShaderId  :  u32;
        defaultShaderId   :  u32;
        defaultShaderLocs : *s32;
        currentShaderId   :  u32;
        currentShaderLocs : *s32;

        stereoRender : bool;
        projectionStereo : [2]Matrix;
        viewOffsetStereo : [2]Matrix;


        currentBlendMode        : s32;
        glBlendSrcFactor        : s32;
        glBlendDstFactor        : s32;
        glBlendEquation         : s32;
        glBlendSrcFactorRGB     : s32;
        glBlendDestFactorRGB    : s32;
        glBlendSrcFactorAlpha   : s32;
        glBlendDestFactorAlpha  : s32;
        glBlendEquationRGB      : s32;
        glBlendEquationAlpha    : s32;
        glCustomBlendModeModified : bool;

        framebufferWidth    : s32;
        framebufferHeight   : s32;
    };

    ExtSupported : struct {
        vao             : bool;
        instancing      : bool;
        texNPOT         : bool;
        texDepth        : bool;
        texDepthWebGL   : bool;
        texFloat32      : bool;
        texCompDXT      : bool;
        texCompETC1     : bool;
        texCompETC2     : bool;
        texCompPVRT     : bool;
        texCompASTC     : bool;
        texMirrorClamp  : bool;                
        texAnisoFilter  : bool;
        computeShader   : bool;
        ssbo            : bool;

        maxAnisotropyLevel : float;
        maxDepthBits : int;
    };
}
LIGHTGRAY  :: Color.{ 200, 200, 200, 255 };   // Light Gray
GRAY       :: Color.{ 130, 130, 130, 255 };   // Gray
DARKGRAY   :: Color.{ 80, 80, 80, 255 }   ;   // Dark Gray
YELLOW     :: Color.{ 253, 249, 0, 255 }  ;   // Yellow
GOLD       :: Color.{ 255, 203, 0, 255 }  ;   // Gold
ORANGE     :: Color.{ 255, 161, 0, 255 }  ;   // Orange
PINK       :: Color.{ 255, 109, 194, 255 };   // Pink
RED        :: Color.{ 230, 41, 55, 255 }  ;   // Red
MAROON     :: Color.{ 190, 33, 55, 255 }  ;   // Maroon
GREEN      :: Color.{ 0, 228, 48, 255 }   ;   // Green
LIME       :: Color.{ 0, 158, 47, 255 }   ;   // Lime
DARKGREEN  :: Color.{ 0, 117, 44, 255 }   ;   // Dark Green
SKYBLUE    :: Color.{ 102, 191, 255, 255 };   // Sky Blue
BLUE       :: Color.{ 0, 121, 241, 255 }  ;   // Blue
DARKBLUE   :: Color.{ 0, 82, 172, 255 }   ;   // Dark Blue
PURPLE     :: Color.{ 200, 122, 255, 255 };   // Purple
VIOLET     :: Color.{ 135, 60, 190, 255 } ;   // Violet
DARKPURPLE :: Color.{ 112, 31, 126, 255 } ;   // Dark Purple
BEIGE      :: Color.{ 211, 176, 131, 255 };   // Beige
BROWN      :: Color.{ 127, 106, 79, 255 } ;   // Brown
DARKBROWN  :: Color.{ 76, 63, 47, 255 }   ;   // Dark Brown
WHITE      :: Color.{ 255, 255, 255, 255 };   // White
BLACK      :: Color.{ 0, 0, 0, 255 }      ;   // Black
BLANK      :: Color.{ 0, 0, 0, 0 }        ;   // Blank (Transparent)
MAGENTA    :: Color.{ 255, 0, 255, 255 }  ;   // Magenta
RAYWHITE   :: Color.{ 245, 245, 245, 255 };   // My own White (raylib logo)

va_list :: *void; // added after recomendation by Gatza - Fehse 2022-02-28

// Matrix, 4x4 components, column major, OpenGL style, right-handed
Matrix :: struct {
	m0, m4,  m8, m12 :  float; // Matrix first row (4 components)
	m1, m5,  m9, m13 :  float; // Matrix second row (4 components)
	m2, m6, m10, m14 :  float; // Matrix third row (4 components)
	m3, m7, m11, m15 :  float; // Matrix fourth row (4 components)
}

// Color, 4 components, R8G8B8A8 (32bit)
Color :: struct {
	r: u8; // Color red value
	g: u8; // Color green value
	b: u8; // Color blue value
	a: u8; // Color alpha value
}

// Rectangle, 4 components
Rectangle :: struct {
	x:      float; // Rectangle top-left corner position x
	y:      float; // Rectangle top-left corner position y
	width:  float; // Rectangle width
	height: float; // Rectangle height
	// #place x; corner : Vector2;
	// #place width; size : Vector2;
}

// Image, pixel data stored in CPU memory (RAM)
Image :: struct {
	data:    *void; // Image raw data
	width:   s32; // Image base width
	height:  s32; // Image base height
	mipmaps: s32; // Mipmap levels, 1 by default
	format:  s32; // Data format (PixelFormat type)
}

// Texture, tex data stored in GPU memory (VRAM)
Texture :: struct {
	id:      u32; // OpenGL texture id
	width:   s32; // Texture base width
	height:  s32; // Texture base height
	mipmaps: s32; // Mipmap levels, 1 by default
	format:  s32; // Data format (PixelFormat type)
}

// Texture2D, same as Texture
Texture2D :: Texture;

// TextureCubemap, same as Texture
TextureCubemap :: Texture;

// RenderTexture, fbo for texture rendering
RenderTexture :: struct {
	id:      u32; // OpenGL framebuffer object id
	texture: Texture; // Color buffer attachment texture
	depth:   Texture; // Depth buffer attachment texture
}

// RenderTexture2D, same as RenderTexture
RenderTexture2D :: RenderTexture;

// NPatchInfo, n-patch layout info
NPatchInfo :: struct {
	source: Rectangle; // Texture source rectangle
	left:   s32; // Left border offset
	top:    s32; // Top border offset
	right:  s32; // Right border offset
	bottom: s32; // Bottom border offset
	layout: s32; // Layout of the n-patch: 3x3, 1x3 or 3x1
}

// GlyphInfo, font characters glyphs info
GlyphInfo :: struct {
	value:    s32; // Character value (Unicode)
	offsetX:  s32; // Character offset X when drawing
	offsetY:  s32; // Character offset Y when drawing
	advanceX: s32; // Character advance position X
	image:    Image; // Character image data
}

// Font, font texture and GlyphInfo array data
Font :: struct {
	baseSize:     s32; // Base size (default chars height)
	glyphCount:   s32; // Number of glyph characters
	glyphPadding: s32; // Padding around the glyph characters
	texture:      Texture2D; // Texture atlas containing the glyphs
	recs:         *Rectangle; // Rectangles in texture for the glyphs
	glyphs:       *GlyphInfo; // Glyphs info data
}

// Camera, defines position/orientation in 3d space
Camera3D :: struct {
	position:   Vector3; // Camera position
	target:     Vector3; // Camera target it looks-at
	up:         Vector3; // Camera up vector (rotation over its axis)
	fovy:       float; // Camera field-of-view aperture in Y (degrees) in perspective, used as near plane width in orthographic
	projection: s32; // Camera projection: CAMERA_PERSPECTIVE or CAMERA_ORTHOGRAPHIC
}

Camera :: Camera3D;

// Camera2D, defines position/orientation in 2d space
Camera2D :: struct {
	offset:   Vector2; // Camera offset (displacement from target)
	target:   Vector2; // Camera target (rotation and zoom origin)
	rotation: float; // Camera rotation in degrees
	zoom:     float; // Camera zoom (scaling), should be 1.0f by default
}

// Mesh, vertex data and vao/vbo
Mesh :: struct {
	vertexCount:   s32; // Number of vertices stored in arrays
	triangleCount: s32; // Number of triangles stored (indexed or not)

	vertices:      *float; // Vertex position (XYZ - 3 components per vertex) (shader-location = 0)
	texcoords:     *float; // Vertex texture coordinates (UV - 2 components per vertex) (shader-location = 1)
	texcoords2:    *float; // Vertex texture second coordinates (UV - 2 components per vertex) (shader-location = 5)
	normals:       *float; // Vertex normals (XYZ - 3 components per vertex) (shader-location = 2)
	tangents:      *float; // Vertex tangents (XYZW - 4 components per vertex) (shader-location = 4)
	colors:        *u8; // Vertex colors (RGBA - 4 components per vertex) (shader-location = 3)
	indices:       *u16; // Vertex indices (in case vertex data comes indexed)

	animVertices:  *float; // Animated vertex positions (after bones transformations)
	animNormals:   *float; // Animated normals (after bones transformations)
	boneIds:       *u8; // Vertex bone ids, max 255 bone ids, up to 4 bones influence by vertex (skinning)
	boneWeights:   *float; // Vertex bone weight, up to 4 bones influence by vertex (skinning)

	vaoId:         u32; // OpenGL Vertex Array Object id
	vboId:         *u32; // OpenGL Vertex Buffer Objects id (default vertex data)
}

// Shader
Shader :: struct {
	id:   u32; // Shader program id
	locs: *s32; // Shader locations array (RL_MAX_SHADER_LOCATIONS)
}

// MaterialMap
MaterialMap :: struct {
	texture: Texture2D; // Material map texture
	color:   Color; // Material map color
	value:   float; // Material map value
}

// Material, includes shader and maps
Material :: struct {
	shader: Shader; // Material shader
	maps:   *MaterialMap; // Material maps array (MAX_MATERIAL_MAPS)
	params: [4] float; // Material generic parameters (if required)
}

// Transform, vertex transformation data
Transform :: struct {
	translation: Vector3; // Translation
	rotation:    Quaternion; // Rotation
	scale:       Vector3; // Scale
}

// Bone, skeletal animation bone
BoneInfo :: struct {
	name:   [32] u8; // Bone name
	parent: s32; // Bone parent
}
